# Thesis

./: README.md
mol2spec/CMGNet/: test_infer_molecular_formula_mul_pr_rerank.py
mol2spec/CMGNet/my_datasets/: nmr_datasets.py
mol2spec/CMGNet/tokenizer-smiles-bart/: merges.txt  special_tokens_map.json  vocab.json
mol2spec/Transformers/: bert+MolCLR-nmr-mult-regression (1).ipynb
spec2mol/CMGNet/: test_infer_molecular_formula_mul_pr_rerank.sh
spec2mol/CMGNet/configs/: bart.json
spec2mol/CMGNet/my_models/: multi_constraint_molecular_generator.py
spec2mol/NMR2Struct/: environment.yml
spec2mol/NMR2Struct/example_configs/: CNMR_shifts.p  alphabet.npy
spec2mol/NMR2Struct_Original/: pyproject.toml
spec2mol/NMR2Struct_Original/example_configs/: HNMR_shifts.p  substructures_957.p  training_spectrum_to_struct.yaml  training_substruct_to_struct.yaml
spec2mol/NMR2Struct_Original/nmr/data/: input_generators.py
spec2mol/NMR2Struct_Original/nmr/networks/: embeddings.py
spec2mol/frags2mol/: construct_mol.py.ipynb  mol_functions.py  predict_carbon_full.py
spec2mol/nmr2struct/: generate_frags_from_spec.ipynb  generate_single_molecule.ipynb  generation_acq.ipynb  nmr2struct_environment.yml
spec2mol/nmr2struct/nmr2struct/: Reader.ipynb  fp2frags.json  fp3frags.json  fp4frags.json  spec2frags.ipynb  spec2frags_model.py
